
- bach.arithmser: fixed bug potentially causing the series to be one element shorter if step was not given and start and/or end were floats. Also applies to the bell arithmser() function.
    If step is 0 and a starting or ending point and a max count are set, a series of equal numbers is returned. Also applies to the bell arithmser() function.


v0.8.1b

Scroll down for very important things you should know about v0.8b

**********************
*** VERY IMPORTANT ***
**********************

- bach has switched to square brackets [] instead of parens ().
      THIS WILL NOT BREAK BACKWARD COMPATIBILITY and you can still continue using () if you liked them.
      However we had good reasons for pushing forward this change. Look at the "what's new" tab in the bach overview.


*****************
*** IMPORTANT ***
*****************

*** THESE CHANGES MIGHT BREAK COMPATIBILITY WITH OLDER PATCHES ***

- bach.roll, bach.score
        The @highlightplay attribute is now by default 0
            Turn it on if you needed it!
        There's a new @applyslope attribute, by default set to 1, 
            that applies range slopes in function slots automatically
            to function segments or curves, to account for slot range slope
            Your patches might then sound different than previously!
            if you did NOT want this, simply set @applyslope to 0.
        The attribute @notificationsformessages is now called @notifymessages. 
            Backwards compatibility SHOULD be preserved, but verify your patches.
        The "interp" and "sample" message now only output a single slot value for temporal slots.
        Now keysignatures appear also by default on auxiliary staves (there's an attribute for turning these extended clefs off)

- bach.score    @outputtrees has changed: now the value 2 outputs trees from the first outlet AND from the duration outlet.