@@ -243,6 +243,8 @@ multiple objects: 	fixed missing lines in help files and references
 
 - bach.arithmser: fixed bug potentially causing the series to be one element shorter if step was not given and start and/or end were floats. Also applies to the bell arithmser() function.
     If step is 0 and a starting or ending point and a max count are set, a series of equal numbers is returned. Also applies to the bell arithmser() function.
+    
+- bach.writesdif: now works
 
 
 v0.8.1b
